# certificate_pinning_httpclient

./: pubspec.yaml
lib/: certificate_pinning_httpclient.dart
linux/: CMakeLists.txt  certificate_pinning_http_client_plugin.cc
linux/include/certificate_pinning_httpclient/: certificate_pinning_http_client_plugin.h
macos/: certificate_pinning_httpclient.podspec
macos/Classes/: CertificatePinningHttpClientPlugin.h  CertificatePinningHttpClientPlugin.m
windows/: CMakeLists.txt  certificate_pinning_httpclient_plugin.cpp  certificate_pinning_httpclient_plugin.h  certificate_pinning_httpclient_plugin_c_api.cpp
windows/include/certificate_pinning_httpclient/: certificate_pinning_http_client_plugin_c_api.h  certificate_pinning_httpclient_plugin_c_api.h
