cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME "certificate_pinning_httpclient")
project(${PROJECT_NAME} LANGUAGES CXX)

set(PLUGIN_NAME "${PROJECT_NAME}_plugin")

find_package(OpenSSL REQUIRED)

list(APPEND PLUGIN_SOURCES
  "certificate_pinning_http_client_plugin.cc"
)

add_library(${PLUGIN_NAME} SHARED
  ${PLUGIN_SOURCES}
)

apply_standard_settings(${PLUGIN_NAME})

set_target_properties(${PLUGIN_NAME} PROPERTIES
  CXX_VISIBILITY_PRESET hidden)
target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)

target_include_directories(${PLUGIN_NAME} INTERFACE
  "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(${PLUGIN_NAME} PRIVATE
  flutter
  PkgConfig::GTK
  OpenSSL::SSL
  OpenSSL::Crypto
)

set(certificate_pinning_httpclient_bundled_libraries
  ""
  PARENT_SCOPE
)
